Changing main.rs to my custom example

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+<head></head>
+
+<body
+  bgcolor=#d0f5de
+>
+</body>
+
 </html>
+
 <style>
-  .green {
-    color: rgb(30, 255, 0);
-  }
+  h1 {text-align: center;}
 </style>
