Expanding app. Styling.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
 </html>
 
 <style>
-  h1 {text-align: center;}
+  h1 {
+    text-align: center;
+  }
+  .content {
+    margin: auto;
+    text-align: center;
+  }
+  .main {
+    text-align: center;
+    color: rgba(0, 78, 13, 0.863);
+  }
 </style>
